--- a/challenge-7/advanced/views/reports/instructions.html.erb
+++ b/challenge-7/advanced/views/reports/instructions.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Installation Instractions</title>
+    <title>Installation Instructions</title>
   </head>
 
   <body style="padding: 1em">
@@ -15,18 +15,18 @@
         <div class="d-flex h-100" style=" align-items: center; justify-content: center;">
           <div>
             <h1 class='text-center'>
-              <% unless @office.class == Hash %>
-                Installation Instractions
+              <% if @office[:data].nil? %>
+                Installation Instructions
               <% else %>
-                <%= @office['name'] %>
+                <%= @office[:data][:name] %>
               <% end %>
             </h1>
 
-            <% if @office.class == Hash %>
+            <% if !@office[:id].nil? && !@office[:data].nil? %>
               <h4 class='text-center'>
-                <%= @office['state'] %>, <%= @office['address'] %>, <%= @office['phone'] %>, <%= @office['type'] %><br />
-                <%= @office['area'] %><br />
-                <%= @office['max_people'] %>
+                <%= @office[:data][:state] %>, <%= @office[:data][:address] %>, <%= @office[:data][:phone] %>, <%= @office[:data][:type] %><br />
+                <%= @office[:data][:area] %><br />
+                <%= @office[:data][:max_people] %>
               </h4>
             <% end %>
           </div>
@@ -35,18 +35,78 @@
     </div>
 
     <div>
-      <%= @instructions %>
+      <% if @office[:id].nil? && @office[:data].nil? %>
+        <h6 class="mt-5">Select the office to continue:</h6>
 
-      <% if @instructions.empty? %>
+        <table class="table">
+          <% @instructions.each do |name, data| %>
+            <tr style='border-bottom: 1px solid black'>
+              <th colspan='4'>
+                <h2 class='mt-5 flex-fill'><%= name %></h2>
+              </th>
+            </tr>
+
+            <tr>
+              <td><strong>Office</strong></td>
+              <td><strong>Type</strong></td>
+              <td><strong>Address</strong></td>
+              <td><strong>LOB</strong></td>
+            </tr>
+
+            <% data.each do |office| %>
+              <tr>
+                <td><a href="/instructions/offices/<%= office[:id] %>"><%= office[:name] %></a></td>
+                <td><%= office[:type] %></td>
+                <td><%= office[:address] %></td>
+                <td><%= office[:lob] %></td>
+              </tr>
+            <% end %>
+          <% end %>
+        </table>
+      <% elsif @office[:data].nil? %>
         <div class="alert alert-danger mt-3 mb-3 m-auto" role="alert" style="width: 500px;">
-          There is no data for the office with this ID: <strong><%= @office %></strong>.
+          There is no data for the office with this ID: <strong><%= @office[:id] %></strong>.
         </div>
+      <% else %>
+        <table class="table">
+          <% @instructions.each do |zone_name, zone| %>
+            <tr>
+              <th colspan='4'>
+                <h2 class='mt-5 flex-fill'><%= zone_name %></h2>
+              </th>
+            </tr>
+
+            <% zone.each do |room_name, materials| %>
+              <tr>
+                <th colspan="4">
+                  <h5><%= room_name %></h5>
+                </th>
+              </tr>
+
+              <tr>
+                <td><strong>Material</strong></td>
+                <td><strong>Material Type</strong></td>
+                <td><strong>Fixture</strong></td>
+                <td><strong>Fixture Type</strong></td>
+              </tr>
+
+              <% materials.each do |material| %>
+                <tr>
+                  <td><%= material[:material_name] %></td>
+                  <td><%= material[:material_type] %></td>
+                  <td><%= material[:fixture_name] %></td>
+                  <td><%= material[:fixture_type] %></td>
+                </tr>
+              <% end %>
+            <% end %>
+          <% end %>
+        </table>
       <% end %>
     </div>
 
     <p class="text-center">
       <a href="/">Go Home</a>
-      <% if @instructions.empty? || @office.class == Hash %>
+      <% if !@office[:id].nil? %>
         | <a href='/instructions/offices'>All offices</a>
       <% end %>
     </p>
